  (Xavier Leroy, report by Richard Bornat, review by Stephen Dolan
   and Mark Shinwell)

- #10371: no longer generatd useless `.cds` file when using
  `-output-complete-exe`.
  (Nicolás Ojeda Bär, review by David Allsopp)

- #10376: Link runtime libraries correctly on msvc64 in -output-complete-obj
  (David Allsopp, review by Gabriel Scherer)

- #10449: Fix major GC work accounting (the GC was running too fast).
  (Damien Doligez, report by Stephen Dolan, review by Nicolás Ojeda Bär
   and Sadiq Jaffer)

- #10454: Check row_more in nondep_type_rec.
  (Leo White, review by Thomas Refis)

- #10468: Correctly pretty print local type substitution, e.g. type t := ...,
  with -dsource
  (Matt Else, review by Florian Angeletti)

- #10550, #10551: fix pretty-print of gadt-pattern-with-type-vars
  (Chet Murthy, review by Gabriel Scherer)

OCaml 4.12, maintenance version
-------------------------------

### Bug fixes:

- #10478: Fix segfault under Windows due to a mistaken initialization of thread
  ID when a thread starts.
  (David Allsopp, Nicolás Ojeda Bär, review by Xavier Leroy)

OCaml 4.12.0 (24 February 2021)
-------------------------------

### Supported platforms (highlights):

- #9699: add support for iOS and macOS on ARM 64 bits
  (Eduardo Rafael, review by Xavier Leroy, Nicolás Ojeda Bär
   and Anil Madhavapeddy, additional testing by Michael Schmidt)

### Standard library (highlights):

- #9797: Add Sys.mkdir and Sys.rmdir.
  (David Allsopp, review by Nicolás Ojeda Bär, Sébastien Hinderer and
   Xavier Leroy)

* #9765: add init functions to Bigarray.
  (Jeremy Yallop, review by Gabriel Scherer, Nicolás Ojeda Bär, and
   Xavier Leroy)

* #9668: List.equal, List.compare
  (This could break code using "open List" by shadowing
   Stdlib.{equal,compare}.)
  (Gabriel Scherer, review by Nicolás Ojeda Bär, Daniel Bünzli and Alain Frisch)

- #9066: a new Either module with
  type 'a Either.t = Left of 'a | Right of 'b