@@ -59,7 +59,7 @@ let get_paths () = List.rev_map Dir.path !dirs
    we are starting from an empty cache, we can avoid checking whether a unit
    name already exists in the cache simply by adding entries in reverse
    order. *)
-let add dir =
+let prepend_add dir =
   List.iter (fun base ->
       let fn = Filename.concat dir.Dir.path base in
       STbl.replace !files base fn;
@@ -69,14 +69,14 @@ let add dir =
 let init l =
   reset ();
   dirs := List.rev_map Dir.create l;
-  List.iter add !dirs
+  List.iter prepend_add !dirs
 
 let remove_dir dir =
   assert (not Config.merlin || Local_store.is_bound ());
   let new_dirs = List.filter (fun d -> Dir.path d <> dir) !dirs in
   if List.compare_lengths new_dirs !dirs <> 0 then begin
     reset ();
-    List.iter add new_dirs;
+    List.iter prepend_add new_dirs;
     dirs := new_dirs
   end
 
@@ -99,6 +99,13 @@ let add dir =
 let append_dir = add
 
 let add_dir dir = add (Dir.create dir)
+
+(* Add the directory at the start of load path - so basenames are
+   unconditionally added. *)
+let prepend_dir dir =
+  assert (not Config.merlin || Local_store.is_bound ());
+  prepend_add dir;
+  dirs := dir :: !dirs
 
 let is_basename fn = Filename.basename fn = fn
 
